# pyconau2020

./: README.md  docker.nix  poetry.nix  pyproject.toml  shell.nix  slides.nix  slides.odp
pycon2020/: mypythonapp.py
